--- a/about_us.html
+++ b/about_us.html
@@ -36,7 +36,7 @@
 
         <div class="topnav__site-tagline">Less is the True Path to <br> Abundance </div>
 
-        <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+        <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
     </div>
 
     <div class="topnav__bar">
@@ -109,54 +109,50 @@
 <main id="about-us">
     <article>
         <section id="visi-misi" class="visi-misi">
-            <div class="wrapper visi-misi__wrapper">
-                <img class="visi-misi__image" src="images/about us/longtree.jpg" >
-            <div class="visi-misi__theme">
-            <div>
-                <h2 class="visi-misi__title">Vision</h2>
-                <p class="visi-misi__statement">We drive a world where humanity's need for nourishment flourishes in harmony with the soil health. We envision a future where agriculture transcends mere productivity to become a force of renewal, restoring soil as a vibrant living ecosystem. With unwavering passion, we <span class="highlight-green">champion soil health</span> , recognizing it as the <span class="highlight-green">heartbeat of sustainable agriculture and the foundation of prosperity</span>  for generations to come. Guided by innovation and responsibility, we strive to cultivate a legacy where every field tells a story of resilience, every harvest is a <span class="highlight-green">triumph of sustainability</span>, and every step forward is a <span class="highlight-green">promise to protect the Earth we call home</span>. We are commited at nurturing the soil, <span class="highlight-green">empowering the farmers</span> and feed a growing world with care and reverence.</p> <br> <br>
-            </div>
-            <div>
+            <h2 class="visi-misi__title">Vision</h2>
+            <div class="lamatu__flex-item">
+                <img class="visi-misi__flex-image" src="images/about us/vision.jpg" alt="longtree"> 
+                <div class="lamatu__text">
+                    <p class="visi-misi__statement">We envision a future where agriculture transcends mere productivity to become a force of renewal, restoring soil as a vibrant living ecosystem. We <span class="highlight-green">champion soil health</span>, recognizing it as the <span class="highlight-green">heartbeat of sustainable agriculture and the foundation of prosperity</span>  for generations to come.</p>
+                 </div>  
+             </div>
+
                 <h2 class="visi-misi__subtitle">Mission</h2>
-                <p class="visi-misi__statement">Our mission is to transform the status quo of the current fertilization regime by pioneering <span class="highlight-maroon">revolutionary precision solutions</span> that redefine efficiency and sustainability. We empower farmers with <span class="highlight-maroon">one-time fertilization and labour solutions</span> that <span class="highlight-maroon">optimize nutrient delivery, minimizes waste and enhance fertilization efficiency</span>. Rooted in the ethos of <span class="highlight-maroon">“Less for Abundance,”</span> we are committed to a lifetime of environmental stewardship, protecting the soil, preserving ecosystems and nurturing the planet for future generations. With every step, we strive to create a new agricultural era where productivity and care for the Earth go hand in hand, leaving a legacy of harmony, resilience and hope.</div>
-            </div>
-            </div>
+            <div class="lamatu__flex-item">               
+                <div class="lamatu__text">
+                    <p class="visi-misi__statement">Our mission is to transform the status quo of the current fertilization regime by pioneering <span class="highlight-maroon"> precision fertilizations</span> that redefine efficiency and sustainability. Rooted in the ethos of <span class="highlight-maroon">“Less for Abundance,”</span> we are committed to lifetime environmental stewardship, protecting and preserving the soil and nurturing the planet.</p>
+                 </div>
+                 <img class="visi-misi__flex-image" src="images/about us/mission.jpg" alt="longtree">  
+             </div>
         </section>
 
         <section id="who-we-are" class="who-we-are">
-            <div class="wrapper who-we-are__wrapper">
-            <img class="who-we-are__image" src="images/about us/3ws.jpg" >
-            <div class="who-we-are__theme">
-            <div>
-                <h2 class="who-we-are__title"> Who We Are?  </h2>
-                <p class="who-we-are__statement">Nanofertech is an agritech startup at the forefront of innovation, driven by a bold mission to revolutionize fertilization practices through precision and sustainability. We specialize in <span class="highlight-green">cutting-edge controlled-release technology for nitrogen fertilizers and beyond</span> , offering a transformative approach that <span class="highlight-green">minimizes waste, maximizes crop yields and places environmental and soil health at the heart of agriculture</span> . Harnessing the power of agro-waste, advanced nanotechnology and AI-powered algorithms, we refine materials to meet the urgent demand for sustainable farming solutions.</p>
-            </div>
-            </div>
+            <h2 class="who-we-are__title">Who We Are?</h2>
+            <div class="lamatu__flex-item">
+                <img class="visi-misi__flex-image" src="images/about us/3ws.jpg" alt="longtree"> 
+                <div class="lamatu__text">
+                    <p class="who-we-are__statement">Nanofertech is an agritech startup at the forefront of innovation, driven by a bold mission to revolutionize fertilization practices through precision and sustainability. We specialize in <span class="highlight-green">cutting-edge controlled-release technology for nitrogen fertilizers and beyond</span> , offering a transformative approach that <span class="highlight-green">minimizes waste, maximizes crop yields and places environmental and soil health at the heart of agriculture</span>.</p>
+                 </div>  
+             </div>
         </section>
 
         <section id="what-we-do" class="what-we-do">
-            <div class="wrapper what-we-do__wrapper">
-            <img class="what-we-do__image" src="images/about us/whatwedo.jpg" >
-            <div class="what-we-do__theme">
-            <div>
-                <h2 class="what-we-do__title">What We Do?</h2>
-                <p class="what-we-do__statement">Nanofertech specializes in <span class="highlight-maroon"> Controlled Release Technology (CRT) for fertilizers</span>, which significantly <span class="highlight-maroon">improves nutrient delivery</span>  efficiency to crops. By applying advanced coating materials to fertilizers, the technology ensures controlled release of nutrients directly to the plant over an extended period, in support of growth and development up to maturity and harvest stage. This targeted delivery boosts fertilizer efficiency by up to 95%, reducing nutrient wastage and minimizing environmental impact. The coatings are customizable according to customer preferences, providing tailored solutions that optimize crop yields while promoting sustainable and efficient fertilization practices.</p>
-            </div>
-            </div>
+            <h2 class="what-we-do__title">What We Do?</h2>
+            <div class="lamatu__flex-item">
+                <div class="lamatu__text">
+                    <p class="what-we-do__statement">We offer control release technology with <span class="highlight-maroon">targeted delivery</span> that <span class="highlight-maroon">boosts fertilizer efficiency, reducing nutrient wastage and minimizing environmental impact</span>. Our technology is customizable according to customer preferences, providing tailored solutions that optimize crop yields.</p>
+                 </div>  
+                 <img class="visi-misi__flex-image" src="images/about us/whatwedo.jpg" alt="sawit"> 
         </section>
 
         <section id="why-us" class="why-us">
-            <div class="wrapper why-us__wrapper">
-            <img class="why-us__image" src="images/about us/whyus.jpg" >
-            <div class="why-us__theme">
-            <div>
                 <h2 class="why-us__title">Why Us?</h2>
-                <p class="why-us__statement">Our startup is a unique blend of visionary researchers and dynamic entrepreneurs, all driven by a shared passion for translating cutting-edge scientific discoveries into practical, real-world solutions. Each member of the team brings a <span class="highlight-green">rich background in scientific research, deep technical expertise, and a relentless commitment</span>  to advancing technology in ways that can make a meaningful difference in people's lives. <br> <br>
-                At the heart of our mission is a deep belief in the power of science to solve some of the world's most pressing problems. Our founders are not just entrepreneurs, but plant scientists who have spent years in laboratories, conducting ground-breaking research, and questioning the status quo. This scientific rigor is the foundation upon which our company is built. We understand that transformative innovation comes not from mere speculation, but from a disciplined, evidence-based approach to problem-solving. <br> <br>
-                Our team is dedicated to championing science-driven innovation, using the latest advancements in research to build solutions that not only address immediate needs but also pave the way for sustainable, scalable improvements. We firmly believe that the greatest breakthroughs come from marrying scientific excellence with entrepreneurial vision. This dual perspective allows us to navigate complex challenges and deliver technologies that are both technically advanced and highly applicable in real-world scenarios.</p>
-            </div>
-            </div>
-            </div>
+                <div class="lamatu__flex-item">
+                    <img class="visi-misi__flex-image" src="images/about us/whyus.jpg" alt="longtree"> 
+                    <div class="lamatu__text">
+                        <p class="why-us__statement">Our team brings a <span class="highlight-green">rich background in scientific research, deep technical expertise, and a relentless commitment</span>  to advancing technology in ways that can make a meaningful difference in people's lives. We firmly believe that the greatest breakthroughs come from marrying scientific excellence with entrepreneurial vision.</p>
+                     </div>  
+                 </div>
         </section>
 
         <section id="lamatu" class="lamatu">
@@ -170,9 +166,13 @@
             <img class="lamatu__image" src="images/about us/lamatu3.jpg" >
             </div>
             <div class="lamatu__theme">
-            <div>
+            <div> 
                 <h2 class="lamatu__title"> <span class="highlight-green">The story behind the name</span></h2>
-                <p class="lamatu__statement">The story of LAMATu begins with a bond of friendship spanning decades, solidified by passion for sustainable agriculture. During a field visit to Tanjung Karang, the co-founders, who have known each other for nearing a decade now, had met local farmers to validate their business idea. As they introduced the controlled-release technology and explained how it could eliminate the need for multiple split applications and reduce the overall cost of production, the farmers were taken aback by the innovation. Among them, they were amazed and responded, “That’s pretty long for a fertilizer,” recognizing the lasting impact it could have on their fertilization regime. This spontaneous remark, inspired the name "LAMATu" derived from the Malay word "lama" meaning "long” with "tu" represents atypical Malaysian expression. The name LAMATu, a perfect reflection of the fertilizer's long-lasting effects was born out of this genuine moment of connection, appreciation and excitement.</p>
+                <div class="lamatu__flex-item">
+                    <div class="lamatu__text">
+                        <p class="lamatu__statement">The story of LAMATu begins with a bond of friendship spanning decades, solidified by passion for sustainable agriculture. During a field visit to Tanjung Karang, the co-founders, had met local farmers to validate their business idea. As they introduced the controlled-release technology and explained how it could <span class="highlight-green">eliminate the need for multiple split applications and reduce the overall cost of production</span>, the farmers were taken aback by the innovation. Among them, they were amazed and responded, “That’s pretty long for a fertilizer,” recognizing the lasting impact it could have on their fertilization regime. This spontaneous remark, inspired the name "LAMATu" derived from the Malay word "lama" meaning "long” with "tu" represents a typical Malaysian expression. The name LAMATu, a perfect reflection of the fertilizer's long-lasting effects was born out of this genuine moment of connection, appreciation and excitement.</p>
+                     </div>  
+                 </div>
 
                 <div class="lamatu__box"> 
                     <h2 class="lamatu__title"><span class="highlight-maroon">The LAMATu Promise</span></h2>
