--- a/disclaimer.html
+++ b/disclaimer.html
@@ -39,7 +39,7 @@
 
             <div class="topnav__site-tagline">Less is the New Lead to <br> Abundance </div>
 
-            <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+            <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
         </div>
 
         <div class="topnav__bar">
