--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
 
             <div class="topnav__site-tagline">Less is the New Lead to <br> Abundance </div>
 
-            <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+            <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
         </div>
 
         <div class="topnav__bar">
@@ -112,8 +112,31 @@
 
 <main>
     <body>
+
     <section id="detailed-events" class="detailed-events">
-        <h2 class="detailed-events__title">Call for Submissions: Special Issue on Developments in Fertilizer Technology – Scientific Reports (Nature Publishing)</h2>
+        <h2 class="detailed-events__title"><span class="highlight-green">Build Your Online Presence with Nanofertech</span></h2>
+        <div class="detailed-events__content">
+            <div class="detailed-events__image-container">
+            <img src="images/events/workshop-left.jpg" alt="" class="detailed-events__image">
+            <img src="images/homepage/girl-with-laptop.jpg" alt="" class="detailed-events__image">
+            <img src="images/events/workshop-right.jpg" alt="" class="detailed-events__image">
+            </div>
+            <div class="detailed-events__details">
+                <p>Are you an aspiring entrepreneur, advocate, or activist looking to brand yourself online? Nanofertech is here to help you take the next step with our routine workshops designed to empower you in building your online presence.
+                <br> <br>
+                In this hands-on workshop, you’ll learn:
+                <p> • <span class="highlight-green">How to design a vectorized logo</span> that reflects your brand identity</p>
+                <p> • Big data <span class="highlight-green">visualization on animation</span></p>
+                <p> • <span class="highlight-green">Creating a professional landing page</span> to capture your audience's attention</p>
+                <p> • <span class="highlight-green">Website development</span> using powerful <span class="highlight-green">open-source resources and website builder</span></p>
+                <p> • <span class="highlight-green">Hosting your website for free on GitHub</span></p>
+                <p> • <span class="highlight-green">Tracking user traffic</span> with <span class="highlight-green">Google Analytics</span> to understand your audience better</p>
+                <p>Our workshops are designed for small classes and are tailored to your needs, ensuring immediate, practical value. Whether you're just getting started or looking to refine your online presence, this workshop will provide the tools and knowledge you need to thrive. No coding knowledge required.                     
+                </p>
+            
+
+    <section id="detailed-events" class="detailed-events">
+        <h2 class="detailed-events__title"><span class="highlight-maroon">Call for Submissions: Special Issue on Developments in Fertilizer Technology – Scientific Reports (Nature Publishing)</span></h2>
         <div class="detailed-events__content">
             <div class="detailed-events__image-container">
             <img src="images/events/event-scientist.jpg" alt="" class="detailed-events__image">
@@ -122,33 +145,25 @@
             </div>
             <div class="detailed-events__details">
                 <time class="detailed-events__time">January 13, 2025</time>
+                <br> <br>
                 <p>
-                    We are excited to announce a unique opportunity for researchers in the field of fertilizer technology! Scientific Reports, the high-impact journal from Nature Publishing, is releasing a special issue focused on the latest Developments in Fertilizer Technology, and we invite you to contribute your groundbreaking research.
-                </p>
-                <p>
-                    <strong>Why submit?</strong>
+                    <span class="highlight-maroon">Why submit?</span>
                     Scientific Reports is a renowned, peer-reviewed, open-access journal with a strong impact factor of 3.8 (Journal Citation Reports® Science Edition, Clarivate Analytics, 2024). This special issue aims to showcase the most innovative advancements in fertilizer technologies that drive sustainability, efficiency, and productivity in agriculture. With a global readership, this is your chance to have your work reach an international audience.
                 </p>
-                <p>
-                    <strong>Guest-Editors:</strong>
-                    The special issue will be overseen by Dr. Nisha Govender, Chief Technology Officer at Nanofertech, an agritech company revolutionizing controlled-release technology for precision fertilization. Dr. Govender’s expertise in soil health, crop nutrition and precision agriculture will guide this issue, ensuring it highlights the most innovative and impactful research in the field (https://www.nature.com/collections/effjjfjcjc/guest-editors).
-                    </p>
                 </p>
                 <p>
-                    <strong>How to Submit?</strong>
+                    <span class="highlight-maroon">How to Submit?</span>
                     Scientific Reports is now accepting abstract submissions to assess the suitability of your research for this special issue. Take advantage of this opportunity to receive valuable feedback before formally submitting your full paper (https://www.nature.com/srep/author-instructions/submission-guidelines).
                 </p>
                 <p>
-                    <strong>What We’re Looking For:</strong>
-                    •	Cutting-edge research in fertilizer technology, especially focused on controlled-release systems and precision agriculture.
-                    •	Studies that contribute to soil health, crop nutrition, and disease management.
-                    •	Papers that address the challenges and opportunities in modern agriculture, including sustainability, resource efficiency, and climate change.
+                    <span class="highlight-maroon">What We’re Looking For:</span>
+                    Cutting-edge research in fertilizer technology, especially focused on controlled-release systems and precision agriculture.
+                    Studies that contribute to soil health, crop nutrition, and disease management.
+                    Papers that address the challenges and opportunities in modern agriculture, including sustainability, resource efficiency, and climate change.
                 </p>
                 <p>
-                    <strong>Why You Should Submit:</strong>
-                    •	Publish in a High-Impact Journal: Scientific Reports is part of the esteemed Nature Publishing Group.
-                    •	Global Exposure: Your research will reach an international scientific audience, positioning you as a thought leader in fertilizer technology.
-                    •	Discretionary Waiver for Publication Fees: Scientific Reports offer a waiver for publication fees based on written requests, making this a valuable opportunity for all researchers.
+                    <span class="highlight-maroon">Why You Should Submit:</span>
+                    Your research will reach an international scientific audience, positioning you as a thought leader in fertilizer technology. Moreover, Scientific Reports offer a waiver for publication fees based on written requests, making this a valuable opportunity for all researchers.
                 </p>
 
                 <p>This is your chance to contribute to cutting-edge innovations in fertilizer technology and have your work featured in one of the world’s most respected scientific journals. Don’t miss out!</p>
