--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <img src="images/homepage/logo_nano-removebg-preview.png" alt="Nanofertech Homepage" class="topnav__logo" width="250" height="250"/>
             </a>
 
-            <div class="topnav__site-tagline">Less is the New Lead to <br> Abundance </div>
+            <div class="topnav__site-tagline typewriter">Less is the New Lead to <br> Abundance </div>
 
-            <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+            <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
         </div>
 
         <div class="topnav__bar">
