--- a/internship.html
+++ b/internship.html
@@ -38,7 +38,7 @@
 
             <div class="topnav__site-tagline">Less is the New Lead to <br> Abundance </div>
 
-            <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+            <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
         </div>
 
         <div class="topnav__bar">
@@ -125,12 +125,12 @@
                 <div class="intern_section">
                     <h2 class="intern__subtitle"><span class="highlight-maroon">What We Offer:</span></h2>
                     <ul class="intern__content">
-                        <li><strong>Academic Credit:</strong> Earn academic credit for your internship while working with us! We’ll collaborate with your university to make sure the experience counts toward your degree.</li>
-                        <li><strong>Duration:</strong> Flexible 6 to 12-month internship options—perfect for fitting with your academic schedule.</li>
-                        <li><strong>Cutting-edge Learning:</strong> Dive deep into nanotechnology for agriculture, computational biology, plant science, and data science. You'll gain hands-on experience in high-impact projects that push the boundaries of innovation.</li>
-                        <li><strong>Comprehensive Skill Development:</strong> From data analytics to nanotech applications, we offer you a well-rounded learning experience to boost your technical skills and make you more employable.</li>
-                        <li><strong>Mentorship and Career Growth:</strong> Work directly with experts in the field who are passionate about guiding and mentoring the next generation of innovators. We equip you with skills that are highly sought after in the tech and agricultural sectors.</li>
-                        <li><strong>Impactful Projects:</strong> Contribute to projects that focus on sustainability, agriculture efficiency, and environmental impact. Be part of a team that is making a difference!</li>
+                        <li>Academic Credit: Earn academic credit for your internship while working with us! We’ll collaborate with your university to make sure the experience counts toward your degree.</li>
+                        <li>Duration: Flexible 6 to 12-month internship options—perfect for fitting with your academic schedule.</li>
+                        <li>Cutting-edge Learning: Dive deep into nanotechnology for agriculture, computational biology, plant science, and data science. You'll gain hands-on experience in high-impact projects that push the boundaries of innovation.</li>
+                        <li>Comprehensive Skill Development: From data analytics to nanotech applications, we offer you a well-rounded learning experience to boost your technical skills and make you more employable.</li>
+                        <li>Mentorship and Career Growth: Work directly with experts in the field who are passionate about guiding and mentoring the next generation of innovators. We equip you with skills that are highly sought after in the tech and agricultural sectors.</li>
+                        <li>Impactful Projects: Contribute to projects that focus on sustainability, agriculture efficiency, and environmental impact. Be part of a team that is making a difference!</li>
                     </ul>
                 </div>
             
