--- a/learn.html
+++ b/learn.html
@@ -36,7 +36,7 @@
 
         <div class="topnav__site-tagline">Less is the True Path to <br> Abundance </div>
 
-        <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+        <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
     </div>
 
     <div class="topnav__bar">
@@ -109,44 +109,56 @@
 <main id="learn">
     <article>
         <section class="fertilizer">
-            <div class="wrapper fertilizer__wrapper">
-                <div class="fertilizer__image-wrapper">
-                    <img class="fertilizer__image" src="/images/fertilizer.JPG" alt="Visual 1">
-                </div>
-            <div class="fertilizer__theme">
-            <div>
-                <h2 class="fertilizer__title">What is Fertilizer?</h2>
-                <p class="fertilizer__statement"> <span class="highlight-green">Fertilizers are plant food</span>. They give plants the nutrients required to grow big, strong, and healthy. When fertilizers are added into the soil, <span class="highlight-green">nitrogen, phosphorus, and potassium which are the key players in the plant's life process</span>, such as photosynthesis, energy production, and others, are made avail. <br> <br>
-                Now, imagine a plant trying to grow in soil that's run out of nutrients. It's like trying to run a marathon on an empty stomach. That's where fertilizers come in. While soil does naturally hold some nutrients, it's not a bottomless pit. Over time, through repeated planting, weather and just the passage of time, nutrients can get washed away or depleted. Fertilizers top up the tank, giving plants what they need to produce food, oxygen, and all that good stuff. Without fertilizers, we'd be slowing down our crops, gardens and even the ecosystems that keep the planet running. It's not just about feeding plants, but it's about feeding life itself.
-                </p> <br>
-            </div>
+            <h1 class="fertilizer__title">What is Fertilizer?</h1>
+            <div class="fertilizer__flex-item">
+                <img class="fertilizer__flex-image" src="images/fertilizer.jpg" alt="farmer"> 
+                <div class="fertilizer__text">
+                    <p class="fertilizer__statement"> <span class="highlight-green">Fertilizers are plant food</span>. They give plants the nutrients required to grow big, strong, and healthy. When fertilizers are added into the soil, <span class="highlight-green">nitrogen, phosphorus, and potassium which are the key players in the plant's life process</span>, such as photosynthesis, energy production, and others, are made avail. <br> <br>
+                    Now, imagine a plant trying to grow in soil that's run out of nutrients. That's where fertilizers come in. While soil does naturally hold some nutrients, it's not a bottomless pit. Fertilizers top up the tank, giving plants what they need to produce food, oxygen, and all that good stuff. Without fertilizers, we'd be slowing down our crops, gardens and even the ecosystems that keep the planet running. <br> <br>
+                    <span class="highlight-green">It's not just about feeding plants, but it's about feeding life itself.</span>
+                    </p>
+                </div>  
+             </div>
         </section>
 
         <section class="food">
-        <div class="wrapper food__wrapper">
-            <div class="food__image-wrapper">
-                <img class="food__image" src="/images/bean.jpg" alt="">
-                <img class="food__image" src="/images/watering.jpg" alt="">
-                <img class="food__image" src="/images/pathway.jpg" alt="">
-                <img class="food__image" src="/images/field.jpg" alt="">
-            </div>
         <div class="food__theme">
-                <h2 class="food__headline">Plant Food: Staple versus Supplement</h2>
-                <h3 class="food__title"> <span class="highlight-green">Fertilizers</span></h3>
-                <p class="food__statement">The plant staples: the foundational nutrients required by plants, in large amounts to grow and thrive. They provide the critical building blocks that <span class="highlight-green">support the plant’s vegetative growth, ability to reproduce, and energy for maturity</span>. Think of fertilizers as the plant’s essential diet which includes macronutrients such as nitrogen, phosphorus, and potassium.  <br> <br>
-                These nutrients are responsible for enabling the plant to grow strong roots, develop healthy stems and produce the energy required for flowering and fruiting. Without fertilizers, plants don’t reach their full potential, since they lack the necessary nutrients to power these vital processes. <span class="highlight-green">Fertilizers are the heart of plant nutrition</span>, providing a broad, ongoing supply of what the plant needs to simply survive and grow. <br> <br>
+            <h1 class="food__headline">Staple versus Supplement</h1>
+            <h2 class="food__title">Fertilizers</h2>
+            <div class="food__flex-item">
+                <img class="food__flex-image" src="images/bean.jpg" alt="bean"> 
+                <div class="food__text">
+                    <p class="food__statement">The plant staples are required in large amounts to grow and thrive. They provide the critical building blocks that <span class="highlight-green">support the plant’s growth and development</span>. Think of fertilizers as the plant’s essential diet which includes macronutrients such as nitrogen, phosphorus, and potassium.  <br> <br>
+                    These nutrients are responsible for enabling the plant to grow strong roots, develop healthy stems and produce the energy required for flowering and fruiting. Without fertilizers, plants don’t reach their full potential, since they lack the necessary nutrients to power these vital processes. <br> <br>
+                    <span class="highlight-green">Fertilizers are the heart of plant nutrition</span>, providing an ongoing supply of what the plant needs to simply survive and grow. 
+                    </p>
+                </div>  
+             </div>
 
-                <h3 class="food__title"> <span class="highlight-maroon">Fertilizing Products</span></h3>
-                <p class="food__statement">The <span class="highlight-maroon"><i>boosters</i> or <i>supplements</i>: the targeted support</span>. They’re formulated to target specific growth phases or enhance particular functions. For example, a targeted fertilizing product can be designed to promote flowering, <span class="highlight-maroon">giving the plant extra nudge</span>  to produce beautiful blooms. Others can help the plant ripen its fruits or accelerate photosynthesis, speeding up energy production for optimal growth. These products may be used in smaller amounts, but their role is just as crucial because they address specific, moment-to-moment needs in a plant’s development. <br> <br>
-                Where fertilizers provide the base nutrients required for overall growth, fertilizing products fine-tune the process, delivering exactly what the plant needs in support of a targeted process or metabolic activity. They step in when the plant has specific demands, whether it's for <span class="highlight-maroon">promoting the next phase of growth, helping the plant adapt to environmental conditions or enhancing its productivity.</span>
-                </p>
+             <h2 class="food__title">Fertilizing Products</h2>
+             <div class="food__flex-item">
+                 <div class="food__text">
+                    <p class="food__statement">The <i>boosters</i> are formulated to target specific growth phases or to enhance particular functions. For example, a targeted fertilizing product can be designed to promote flowering, <span class="highlight-maroon">giving the plant extra nudge</span>  to produce beautiful blooms. 
+                    <br> <br>
+                    These products may be <span class="highlight-maroon">used in smaller amounts</span>, but their role is just as crucial because they address specific, moment-to-moment needs in a plant’s development. <br> <br>
+                    Where fertilizers provide the base nutrients required for overall growth, fertilizing products <span class="highlight-maroon">fine-tune the process, delivering exactly what the plant needs</span> in support of a targeted process or metabolic activity.
+                    </p>
+                 </div>
+                 <img class="food__flex-image" src="images/watering.jpg" alt="bean">   
+              </div>
 
-                <h3 class="food__title"> <span class="highlight-green">Fertilizer & fertilizing products</span></h3>
-                <p class="food__statement">The <span class="highlight-green">synergy between fertilizers and fertilizing products</span> is where the <span class="highlight-green">magic happens</span>. Fertilizers establish the strong foundation of nutrients for healthy growth, while fertilizing products provide that extra boost when the plant needs a little more focused attention. Together, they create a harmonious balance that ensures plants not only grow but thrive gracefully, producing rich and abundant harvests. It’s about giving the plant everything it needs, at every stage of its life cycle, for it to flourish to its fullest potential. <span class="highlight-green">Fertilizers keep the plant healthy, while fertilizing products help it shine at its best.</span></p>
+              <h2 class="food__title">Fertilizer & fertilizing products</h2>
+              <div class="food__flex-item">
+                  <img class="food__flex-2image" src="images/pathway.jpg" alt="pathway"> 
+                  <div class="food__text">
+                    <p class="food__statement">The <span class="highlight-green">synergy between fertilizers and fertilizing products</span> is where the <span class="highlight-green">magic happens</span>. Fertilizers establish the strong foundation for healthy growth, while fertilizing products provide that extra boost when the plant needs a little more focused attention. Together, they create <span class="highlight-green">a harmonious balance</span> that ensures plants not only grow but thrive gracefully, producing rich and abundant harvests. <br> <br>
+                    <span class="highlight-green">Fertilizers keep the plant healthy, while fertilizing products help it shine at its best.</span></p>
+                  </div>  
+                  <img class="food__flex-2image" src="images/field.jpg" alt="field">
+               </div>
         </div>
         </div>
         </section>
-
         <section class="agriculture">
             <div class="wrapper agriculture__wrapper">
                 <div class="agriculture__theme">
