--- a/our-work.html
+++ b/our-work.html
@@ -38,7 +38,7 @@
 
             <div class="topnav__site-tagline">Less is the New Lead to <br> Abundance </div>
 
-            <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+            <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
         </div>
 
         <div class="topnav__bar">
@@ -112,7 +112,7 @@
 
     <main class="our-work">
         <div class="our-work__container">
-            <h1 class="our-work__main-title">Innovative AI-Powered Fertilizer Release Technology</h1>
+            <h1 class="our-work__main-title">Innovative AI-Powered Nutrient Release Technology</h1>
             <div class="our-work__image-container">
             <img class="our-work__image" src="images/innovation-left.jpg" alt="Innovation Picture">
             <img class="our-work__image" src="images/innovation-center.png" alt="Innovation Picture">
@@ -122,7 +122,7 @@
 
         <section id="what-is-crt" class="what-is-crt">
             <h2 class="what-is-crt__title">Traditional Fertilizers: Challenges and Limitations</h2>
-            <p class="our-work__description">Conventional fertilizers have long been a staple in agriculture, providing essential nutrients to crops for optimal growth. However, their use run in parallel with the following challenges:</p>
+            <p class="our-work__description">Conventional fertilizers have long been a staple in agriculture, providing essential nutrients to crops for optimal growth. However, the overuse, run in parallel with the following challenges:</p>
 
             <div class="our-work__image-flex-container">
                 <div class="our-work__image-wrapper">
@@ -144,7 +144,7 @@
         </section>
 
         <section id="solution" class="solution">
-            <h2 class="solution__title">The Nanofertech Solution: AI-Powered Controlled Release Technology</h2>
+            <h2 class="solution__title">AI-Powered Controlled Release Technology</h2>
             <p class="our-work__description">At Nanofertech, we've developed a transformative technology that combines precision and sustainability. Our controlled release fertilizers use a proprietary coating material, designed to regulate the release of nutrients based on plant needs, environmental conditions, and growth stages. This dynamic system is enhanced by an AI-powered model that adjusts and optimizes the release mechanism, ensuring nutrients are delivered at the right time, in the right amount, and where they are needed most.</p>
             
             <div class="wrapper solution__wrapper">
@@ -203,14 +203,20 @@
             <img class="new-era__image" src="images/new-era-left.png" >
         <div class="new-era__theme">   
             <h1 class="new-era__title">A New Era in Agriculture</h1> <br>
-            <p class="new-era__statement">Nanofertech's AI-powered controlled release technology is the next step in sustainable agriculture. <span class="highlight-green">By combining smart coating materials with artificial intelligence,</span> we are creating a future where <span class="highlight-green">fertilizers are used efficiently and crops thrive with fewer resources.</span> <br> <br>
-            Join us in transforming the way the world grows food, helping farmers, the environment, and future generations. Explore more about our technology and how it can benefit your farm today.
+            <p class="new-era__statement">Nanofertech's AI-powered controlled release technology is the next step in sustainable agriculture. <span class="highlight-green">By combining smart coating materials with artificial intelligence,</span> we are creating a future where <span class="highlight-green">fertilizers are used efficiently and crops thrive with fewer resources.</span>
             </p>
         </div>
         <img class="new-era__image" src="images/new-era-right.png" >
         </div>
         </section>
         
+        <div class="our-work__container">
+            <h1 class="our-work__main-title"><span class="highlight-maroon">Our Solution</span></h1>
+            <div class="our-work__image-container">
+            <img class="our-work__image" src="images/solution-left.jpg" alt="Innovation Picture">
+            <img class="our-work__image" src="images/solution-middle.jpg" alt="Innovation Picture">
+            <img class="our-work__image" src="images/solution-right.jpg" alt="Innovation Picture">
+            </div>
       </main>
       </body>
       </html>
