--- a/trials.html
+++ b/trials.html
@@ -38,7 +38,7 @@
 
             <div class="topnav__site-tagline">Less is the New Lead to <br> Abundance </div>
 
-            <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+            <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
         </div>
 
         <div class="topnav__bar">
@@ -114,13 +114,13 @@
     <section id="fertilizer-trials" class="trials">
         <div class="wrapper trials__main-wrapper">
             <div class="trials__container">
-                <h3 class="trials__subtitle1">Improves Yield</h3>
+                <!-- <h3 class="trials__subtitle1">Improves Yield</h3> -->
                 <img class="trials__picture left" src="images/fertilizer_trials/trial pic2.jpg">
                 <div class="trials__main">
                     <img class="trials__main-image" src="images/fertilizer_trials/trial-lamatu.jpg">
                     <h3 class="trials__subtitle3">MORE with LESS</h3>
                 </div>
-                <h3 class="trials__subtitle2">Reduces Fertilization Cost</h3>
+                <!-- <h3 class="trials__subtitle2">Reduces Fertilization Cost</h3> -->
                 <img class="trials__picture right" src="images/fertilizer_trials/morewithless.jpg">
             </div>
             
