--- a/history.html
+++ b/history.html
@@ -36,7 +36,7 @@
 
         <div class="topnav__site-tagline">Less is the True Path to <br> Abundance </div>
 
-        <a class="topnav__button button primary" href="" target="_blank">Support Our Mission</a>
+        <a class="topnav__button button primary" href="stripe.html" target="_blank">Support Our Mission</a>
     </div>
 
     <div class="topnav__bar">
@@ -122,58 +122,63 @@
                 </div>
                 
             <div>
-                <p class="history__statement"> <span class="highlight-green">Agriculture</span> has been <span class="highlight-green">the heartbeat of human civilization</span> for thousands of years. Growing food to sustain lives, building communities, and shaping cultures  across various demographic regions. Early farming practices were closely tied to the rhythms of nature, with farmers working in harmony with the land, understanding its cycles and passing down knowledge through generations. From the fertile fields of Mesopotamia to the terraces of the Andes, agriculture enabled the rise of cities and civilizations. It laid the <span class="highlight-green">foundation for trade, culture, and technological innovation</span>, with each new advancement deepening our connection to the land. Agriculture has always been a reflection of human ingenuity and resilience, deeply woven into our spiritual and cultural identities. But as societies expanded and technologies advanced, agriculture shifted. Today, agriculture faces new challenges, from feeding a growing global population to addressing environmental concerns, yet the essential principles of respect for nature and sustainable practices remain just as important as they were thousands of years ago.
-                </p> <br>
+                <p class="history__statement"> <span class="highlight-green">Agriculture</span> has been <span class="highlight-green">the heartbeat of human civilization</span> for thousands of years. Growing food to sustain lives, building communities, and shaping cultures  across various demographic regions. Early farming practices were closely tied to the rhythms of nature, with farmers working in harmony with the land, understanding its cycles and passing down knowledge through generations. <br> <br>
+                From the fertile fields of Mesopotamia to the terraces of the Andes, agriculture enabled the rise of cities and civilizations. It laid the <span class="highlight-green">foundation for trade, culture, and technological innovation</span>, with each new advancement deepening our connection to the land. Agriculture has always been a reflection of human ingenuity and resilience, deeply woven into our spiritual and cultural identities. As societies expanded and technologies advanced, agriculture shifted. <br> <br>
+                Today, agriculture faces new challenges, from feeding a growing global population to addressing environmental concerns, yet the essential principles of respect for nature and sustainable practices remain just as important as they were thousands of years ago.
+                </p>
             </div>
             </div>
             <div class="history__main">
             </div>
-            <div class="history__content">
-                <div class="history__image-wrapper">
-                    <img class="history__image" src="/images/banana.jpg" alt="">
+                <h2 class="food__title">The Dawn of Farming</h2>
+                <div class="food__flex-item">
+                   <img class="food__flex-image" src="images/cow.jpg" alt="cow">   
+                   <div class="food__text">
+                    <p class="history__statement">In the earliest days of human civilization, agriculture was primarily based on the domestication of plants and animals. Neolithic Revolution, marked the shift from <span class="highlight-maroon">hunter-gatherer societies to settled agricultural communities.</span> This transition, first occurring in the Fertile Crescent, marked the dawn of agriculture as humans began domesticating plants and animals for food. <br> <br>
+                    The early agricultural practices were focused on staple crops like wheat, barley, and rice. This foundational period set the stage for agricultural societies which began to <span class="highlight-maroon">rely on farming for sustenance and survival</span>. <br> <br>
+                    These early societies began experimenting with <span class="highlight-maroon">irrigation techniques, crop rotation, and animal husbandry,</span>  laying the groundwork for modern farming practices.</p>
+                    </div>
                 </div>
-                <div>
-                    <h3 class="history__title">The Dawn of Farming </h3>
-                    <p class="history__statement">In the earliest days of human civilization, agriculture was primarily based on the domestication of plants and animals. Prehistoric farming, known as the Neolithic Revolution (around 10,000 BCE), marked the shift from hunter-gatherer societies to settled agricultural communities. This transition, first occurring in the Fertile Crescent (modern-day Iraq, Syria, and Turkey), marked the dawn of agriculture as humans began domesticating plants and animals for food. The early agricultural practices were focused on <span class="highlight-maroon">staple crops like wheat, barley, and rice</span>. This foundational period set the stage for agricultural societies which began to <span class="highlight-maroon">rely on farming for sustenance and survival</span>. As civilizations grew in places like Egypt, Mesopotamia, the Indus Valley and China, agriculture expanded. These early societies began experimenting with <span class="highlight-maroon">irrigation techniques, crop rotation, and animal husbandry,</span>  laying the groundwork for modern farming practices.</p>
-                </div>
-            </div>
-            <div class="history__content">
-                <div class="history__image-wrapper">
-                    <img class="history__image" src="/images/redleaves.jpg" alt="">
-                </div>
-                <div>
-                    <h3 class="history__title">The Agricultural Revolution: 16-18th Century</h3>
-                    <p class="history__statement">The next significant phase in global agriculture came during the Agricultural Revolution of the 16th to 18th centuries in Europe, a period marked by several key developments. Technological advancements, such as the <span class="highlight-green">seed drill</span> invented by Jethro Tull in the early 1700s, enabled more <span class="highlight-green">efficient planting and crop management</span>. <span class="highlight-green">Crop rotation</span>, the practice of  <span class="highlight-green">alternating crops to preserve soil fertility</span>, became more widespread, leading to significant increases in agricultural output. In England, the Enclosure Movement saw the consolidation of common land into larger, more efficient farms, though it displaced many small-scale farmers. The Columbian Exchange, which involved the exchange of goods between the Old World (Europe, Africa, Asia) and the New World (the Americas), <span class="highlight-green">introduced new crops like maize, potatoes, tomatoes, and sugarcane</span> to different regions. While agriculture remained largely localized, these developments laid the foundation for the global agricultural system we recognize today.</p>
-                </div>
-            </div>
-            <div class="history__content">
-                <div class="history__image-wrapper">
-                    <img class="history__image" src="/images/leaf.jpg" alt="">
-                </div>
-                <div>
-                    <h3 class="history__title">The Rise of Global Trade: 19th Century Onward</h3>
-                    <p class="history__statement">With the rise of the Industrial Revolution in the 19th century, global trade in food commodities grew rapidly, driven by several key factors. The development of steamships, railways, and later airplanes made it <span class="highlight-maroon">easier and more affordable to transport food over long distances</span>, making international trade more feasible. Products like <span class="highlight-maroon">wheat, coffee, cotton, sugar, and spices became essential exports and imports</span> between countries; for example, the United States began exporting vast quantities of grain to Europe, while European countries exported tea, coffee, and sugar to the Americas. European colonial powers also played a significant role by establishing <span class="highlight-maroon">agricultural colonies in Africa, Asia, and the Americas,</span> where crops such as rubber, coffee, and cocoa were grown for export, leading to the expansion of monoculture farming, a feature that persists in global trade today. By the early 20th century, agriculture had firmly become a part of global trade networks, although much of the food produced still remained within local or national borders, with trade limited by regional infrastructure and economic policies.</p>
+
+                <h2 class="food__title">The Agricultural Revolution: 16-18th Century</h2>
+                <div class="food__flex-item">  
+                   <div class="food__text">
+                    <p class="history__statement">Technological advancements, such as the <span class="highlight-green">seed drill</span> invented by Jethro Tull in the early 1700s, enabled more <span class="highlight-green">efficient planting and crop management</span>. <br> <br>
+                    <span class="highlight-green">Crop rotation</span>, the practice of  <span class="highlight-green">alternating crops to preserve soil fertility</span>, became more widespread, leading to significant increases in agricultural output. The Columbian Exchange, which involved the exchange of goods between the Old World and the New World, <span class="highlight-green">introduced new crops like maize, potatoes, tomatoes, and sugarcane</span> to different regions. <br> <br>
+                    While agriculture remained largely localized, these developments laid the foundation for the global agricultural system we recognize today.</p>
+                    </div>
+                    <img class="food__flex-image" src="images/road.jpg" alt="road">
                 </div>
             </div>
-            <div class="history__content">
-                <div class="history__image-wrapper">
-                    <img class="history__image" src="/images/ladyfinger.jpg" alt="">
+
+            <h2 class="food__title">The Rise of Global Trade: 19th Century Onward</h2>
+                <div class="food__flex-item">
+                <img class="history__image" src="/images/painting.jpg" alt="painting"> 
+                   <div class="food__text">
+                    <p class="history__statement">The development of steamships, railways, and later airplanes made it <span class="highlight-maroon">easier and more affordable to transport food over long distances</span>, making international trade more feasible. Products like <span class="highlight-maroon">wheat, coffee, cotton, sugar, and spices became essential exports and imports</span> between countries. <br> <br>
+                    European colonial powers also played a significant role by establishing <span class="highlight-maroon">agricultural colonies in Africa, Asia, and the Americas,</span> where crops such as rubber, coffee, and cocoa were grown for export, leading to the expansion of monoculture farming, a feature that persists in global trade today. <br> <br> 
+                    By the early 20th century, agriculture had firmly become a part of global trade networks with trade limited by regional infrastructure and economic policies.</p>
+                    </div>  
                 </div>
-                <div>
-                    <h3 class="history__title">The Green Revolution: Mid-20th Century</h3>
-                    <p class="history__statement"> <span class="highlight-green">The Green Revolution</span> of the 1940s to 1960s marked a major turning point in global agriculture. Scientists and agronomists <span class="highlight-green">introduced high-yielding crop varieties, chemical historys and pesticides</span> which dramatically increased food production in the developing countries. The revolution was particularly successful in Asia and Latin America, where countries like India and Mexico witnessed substantial increases in grain yields, particularly wheat and rice. This period also saw the <span class="highlight-green">rise of global food corporations and the establishment of large-scale industrial agriculture systems</span>. Agricultural productivity soared, and many countries became more self-sufficient in food production. However, the environmntal consequences such as soil degradation, water scarcity and increased chemical runoff become significant challenges, later.</p>
+
+                <h2 class="food__title">The Green Revolution: Mid-20th Century</h2>
+                <div class="food__flex-item">
+                   <div class="food__text">
+                    <p class="history__statement"> <span class="highlight-green">The Green Revolution</span> of the 1940s to 1960s marked a major turning point in global agriculture. Scientists and agronomists <span class="highlight-green">introduced high-yielding crop varieties, chemical historys and pesticides</span> which dramatically increased food production in the developing countries. <br> <br>
+                    The revolution was particularly successful in Asia and Latin America, where countries like India and Mexico witnessed substantial increases in grain yields, particularly wheat and rice. This period also saw the <span class="highlight-green">rise of global food corporations and the establishment of large-scale industrial agriculture systems</span>. <br> <br>
+                    Agricultural productivity soared and many countries became more self-sufficient in food production.</p>
+                    </div> 
+                    <img class="history__image" src="/images/sunset.jpg" alt="sunset">  
                 </div>
-            </div>
-            <div class="history__content">
-                <div class="history__image-wrapper">
-                    <img class="history__image" src="/images/brinjal.jpg" alt="">
-                </div>
-                <div>
-                    <h3 class="history__title">Modern Global Agriculture: From Local to Global</h3>
-                    <p class="history__statement">By the 1990s and early 2000s, global agriculture had become deeply interconnected through global supply chains, modern transportation systems and technological advancements in farming. <span class="highlight-maroon">Free trade agreements</span> like NAFTA and the EU Common Market, along with the World Trade Organization (WTO), helped create a truly <span class="highlight-maroon">global food market</span> where <span class="highlight-maroon">countries exported and imported food on an unprecedented scale</span>. For example, Brazil emerged as a major exporter of soybeans whereas China became the world’s largest importer of soybeans and meat. <span class="highlight-maroon">Technological innovations encompassing biotechnology and genetically modified (GM) crops, further transformed global agriculture, boosting efficiency and yields in many regions </span>. The globalized food supply now includes vast supply chains that move food across continents, from bananas grown in Central America to rice harvested in Southeast Asia, to wheat from Russia and Ukraine. Today, <span class="highlight-maroon">Asia is the largest producer of food</span>, contributing significantly to global agricultural output, while still being a major importer of commodities such as soybeans and meat.</p>
-                </div>
-            </div>
-            </div>
+
+                <h2 class="food__title">Modern Global Agriculture: From Local to Global</h2>
+                <div class="food__flex-item">
+                   <img class="history__image" src="/images/world.jpg" alt="worldmap">
+                   <div class="food__text">
+                    <p class="history__statement">Global agriculture had become deeply interconnected through global supply chains, modern transportation systems and technological advancements in farming. <span class="highlight-maroon"> <br> <br>
+                    Free trade agreements</span> like NAFTA and the EU Common Market, along with the World Trade Organization (WTO), helped create a truly <span class="highlight-maroon">global food market</span> where <span class="highlight-maroon">countries exported and imported food on an unprecedented scale</span>.<br> <br>
+                    The globalized food supply now includes vast supply chains that move food across continents, from bananas grown in Central America to rice harvested in Southeast Asia, to wheat from Russia and Ukraine. Today, <span class="highlight-maroon">Asia is the largest producer of food, contributing significantly to global agricultural output</span>, while still being a major importer of commodities such as soybeans and meat.</p>
+                    </div> 
             </div>
         </section>
     </article>
